권한별 레이아웃 및 xml 구성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JotSo</string>
+    <string name ="url">https://www.youtube.com/channel/UCPE3HrEDpXeAB0_d1uLwAdQ</string>
 </resources>
